Add listuser endpoint
